Fix "More" buttons on rocket pages
- button on UXO page now points to correct flickr album
- fix the css on those buttons (broken in commit 6d8b303a9)
- remove execute permissions on some html/css files

--- a/css/rocket_pages.css
+++ b/css/rocket_pages.css
@@ -98,3 +98,30 @@ p {
 .videos div div {
 	margin-bottom: 1rem;
 }
+
+.photos__more__button {
+    background-color: #8c0733;
+    margin-top: 1rem;
+    padding: 0.5rem;
+    text-align: center;
+    height: 2rem;
+    width: 6rem;
+    border-radius: 0.5rem;
+    /* transitions */
+    -webkit-transition: background-color 0.3s linear;
+    -moz-transition: background-color 0.3s linear;
+    -o-transition: background-color 0.3s linear;
+    -ms-transition: background-color 0.3s linear;
+    transition: background-color 0.3s linear;
+}
+
+.photos__more__button:hover  {
+    background-color: #620423;
+}
+
+.photos__more__button h1 {
+    color: #ffffff;
+    font-family: 'Open Sans', Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: 1rem;
+}
